// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/Tooltip Interactive Tooltip 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  padding: 1rem;
  border-radius: 0.25rem;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  color: #b9cdfc;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 8.875rem;
  width: 12.375rem;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.5rem;
  background: #111530;
}

.emotion-9 {
  text-align: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1de9b6;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-10:hover {
  color: #ffffff;
}

.emotion-10:hover path {
  fill: #ffffff;
}

.emotion-10:visited {
  color: #dbc1ff;
}

.emotion-10:visited path {
  fill: #dbc1ff;
}

.emotion-10:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-11 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  fill: #1de9b6;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-12 path {
  fill: #1de9b6;
}

.emotion-13 {
  background: #1B214F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-14 {
  background-color: #ffffff;
  border: 0.0625rem solid #E7E8FF;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-14 .tippy-content {
  background-color: #ffffff;
  padding: 1rem;
  border-radius: 0.25rem;
}

.emotion-14 .tippy-arrow::before {
  color: #ffffff;
}

.emotion-16 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
  height: auto;
  background-color: #1de9b6;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-16:focus-visible:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-16:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-16:hover:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-16:active:not(:disabled) {
  background-color: #0C7D61;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  color: #686BB3;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 8.875rem;
  width: 12.375rem;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.5rem;
  background: #F4F8FF;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1552DD;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-21:hover {
  color: #1B214F;
}

.emotion-21:hover path {
  fill: #1B214F;
}

.emotion-21:visited {
  color: #6c28cc;
}

.emotion-21:visited path {
  fill: #6c28cc;
}

.emotion-21:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-23 {
  fill: #1552DD;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-23 path {
  fill: #1552DD;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "128px",
            }
          }
        >
          <div
            arrow={false}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={true}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            <div
              className="emotion-7"
            >
              <div
                className="emotion-8"
              >
                <span />
              </div>
              <div
                className="emotion-9"
              >
                It was a dark and stormy night; the rain fell in torrents
              </div>
              <a
                className="emotion-10"
                data-testid="_link"
                href="#"
              >
                <span>
                  Learn more
                </span>
                <span
                  className="emotion-11"
                  data-testid="_link_icon"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "128px",
            }
          }
        >
          <div
            arrow={false}
            className="emotion-14"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={true}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-16"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            <div
              className="emotion-18"
            >
              <div
                className="emotion-19"
              >
                <span />
              </div>
              <div
                className="emotion-9"
              >
                It was a dark and stormy night; the rain fell in torrents
              </div>
              <a
                className="emotion-21"
                data-testid="_link"
                href="#"
              >
                <span>
                  Learn more
                </span>
                <span
                  className="emotion-11"
                  data-testid="_link_icon"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-23"
                  />
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tooltip Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="tooltips-provide-brief,-helpful-information-when-a-user-hovers-or-focuses-on-the-trigger-element."
      >
        Tooltips provide brief, helpful information when a user hovers or focuses on the trigger element.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tooltip Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #ffffff;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-7 .tippy-content {
  background-color: #1B214F;
  padding: 1rem;
  border-radius: 0.25rem;
}

.emotion-7 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  color: #b9cdfc;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 8.875rem;
  width: 12.375rem;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.5rem;
  background: #111530;
}

.emotion-13 {
  text-align: center;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  color: #1de9b6;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0.25rem solid rgba(84,94,255,0);
  opacity: 1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  pointer-events: default;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
}

.emotion-14:hover {
  color: #ffffff;
}

.emotion-14:hover path {
  fill: #ffffff;
}

.emotion-14:visited {
  color: #dbc1ff;
}

.emotion-14:visited path {
  fill: #dbc1ff;
}

.emotion-14:focus-visible {
  border: 0.25rem solid #9347ff;
}

.emotion-15 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-16 {
  fill: #1de9b6;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-16 path {
  fill: #1de9b6;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "gap": "128px",
              "height": "200px",
              "justifyContent": "center",
              "padding": "16px",
              "width": "600px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                100,
                100,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Text
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
          <div
            style={
              Object {
                "padding": "128px",
              }
            }
          >
            <div
              arrow={false}
              className="emotion-7"
              delay={
                Array [
                  100,
                  100,
                ]
              }
              interactive={true}
              placement="right"
            >
              <div
                className="emotion-4"
              >
                <button
                  className="emotion-5"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-6"
                  >
                    <span>
                      Interactive
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div>
              <div
                className="emotion-11"
              >
                <div
                  className="emotion-12"
                >
                  <span />
                </div>
                <div
                  className="emotion-13"
                >
                  It was a dark and stormy night; the rain fell in torrents
                </div>
                <a
                  className="emotion-14"
                  data-testid="_link"
                  href="#"
                >
                  <span>
                    Learn more
                  </span>
                  <span
                    className="emotion-15"
                    data-testid="_link_icon"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-16"
                    />
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tooltip Text Tooltip 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #ffffff;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  background: #1B214F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-8 {
  background-color: #ffffff;
  border: 0.0625rem solid #E7E8FF;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-8 .tippy-content {
  background-color: #ffffff;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #1B214F;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-8 .tippy-arrow::before {
  color: #ffffff;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
  height: auto;
  background-color: #1de9b6;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: #00C6A2;
}

.emotion-10:active:not(:disabled) {
  background-color: #0C7D61;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "16px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "padding": "16px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-8"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-10"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Hover here
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tooltip Tooltip placement 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  background-color: #1B214F;
  border: 0.0625rem solid rgba(84,94,255,0);
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-3 .tippy-content {
  background-color: #1B214F;
  max-width: 16rem;
  padding: 0.5rem;
  border-radius: 0.25rem;
  color: #ffffff;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  text-align: start;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3 .tippy-arrow::before {
  color: #1B214F;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  height: auto;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "gap": "32px",
              "height": "100px",
              "justifyContent": "center",
              "padding": "48px 72px",
              "width": "600px",
            }
          }
        >
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="left"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Left Tooltip
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="top"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Top Tooltip
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="bottom"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Bottom Tooltip
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
          <div
            arrow={true}
            className="emotion-3"
            delay={
              Array [
                500,
                500,
              ]
            }
            interactive={false}
            placement="right"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <span>
                    Right Tooltip
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div>
            This is a Tooltip
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
